Refactor billing services to use InternalBillingService
- Replaced instances of BillingService with InternalBillingService in AiQuizGenerationServiceImpl and QuizServiceImpl for improved billing operation handling.
- Updated method calls to utilize the new InternalBillingService interface, ensuring consistent billing logic across services.
- Enhanced unit tests to mock InternalBillingService, ensuring proper verification of billing operations during quiz generation and job processing.
- Adjusted application properties to enable billing features, enhancing overall functionality and user experience.